<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/DollarTextBox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:width="300dp"
        android:ems="10"
        android:hint="@string/dollar"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/PoundTextBox"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:width="300dp"
        android:ems="10"
        android:hint="@string/pound"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/DollarTextBox"
        app:layout_constraintVertical_bias="0.262" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/us_dollar"
        app:layout_constraintBottom_toTopOf="@+id/DollarTextBox"
        app:layout_constraintStart_toStartOf="@+id/DollarTextBox" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/egyptian_pound"
        app:layout_constraintBottom_toTopOf="@+id/PoundTextBox"
        app:layout_constraintStart_toStartOf="@+id/PoundTextBox" />

    <Button
        android:id="@+id/ConvertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/convert"
        app:layout_constraintStart_toStartOf="@+id/PoundTextBox"
        app:layout_constraintTop_toBottomOf="@+id/PoundTextBox" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="32dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="@+id/PoundTextBox"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ConvertButton"
        app:layout_constraintTop_toBottomOf="@+id/PoundTextBox" />


</androidx.constraintlayout.widget.ConstraintLayout>